@@ -85,7 +85,7 @@ Here is an example configuration:
     ;; (corfu-quit-at-boundary nil)   ;; Never quit at completion boundary
     ;; (corfu-quit-no-match nil)      ;; Never quit, even if there is no match
     ;; (corfu-preview-current nil)    ;; Disable current candidate preview
-    ;; (corfu-preselect-first nil)    ;; Disable candidate preselection
+    ;; (corfu-preselect 'prompt)      ;; Preselect the prompt
     ;; (corfu-on-exact-match nil)     ;; Configure handling of exact matches
     ;; (corfu-scroll-margin 5)        ;; Use scroll margin
 
@@ -385,8 +385,8 @@ force snippet expansion, confirm a candidate explicitly with ~RET~.
   (use-package corfu
     ;; TAB-and-Go customizations
     :custom
-    (corfu-cycle t)             ;; Enable cycling for `corfu-next/previous'
-    (corfu-preselect-first nil) ;; Disable candidate preselection
+    (corfu-cycle t)           ;; Enable cycling for `corfu-next/previous'
+    (corfu-preselect 'prompt) ;; Always preselect the prompt
 
     ;; Use TAB for cycling, default is `corfu-complete'.
     :bind
